minor edits to figures, update references

--- a/Code/Notebooks/GEOCLIM_parameter_exploration.ipynb
+++ b/Code/Notebooks/GEOCLIM_parameter_exploration.ipynb
@@ -3435,7 +3435,7 @@
     "ax[1].text(0.95, 0.05, 'B', fontweight='bold', fontsize=20,\n",
     "           horizontalalignment='center', verticalalignment='center', transform=ax[1].transAxes)\n",
     "\n",
-    "plt.savefig('../../Manuscript/Figures/W_vs_r2.pdf', bbox_inches='tight')\n",
+    "plt.savefig('../../Manuscript/Figures/W_vs_r2.jpg', bbox_inches='tight', dpi=300)\n",
     "plt.show(fig)"
    ]
   },
@@ -3962,7 +3962,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75ee11e2279e4547a1c46bc36704236d",
+       "model_id": "15346fd411e64deba9061051e6119ace",
        "version_major": 2,
        "version_minor": 0
       },
