--- a/Manuscript/Supplementary_Information/References.bib
+++ b/Manuscript/Supplementary_Information/References.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Yuem Park at 2019-09-13 10:13:09 -0700 
+%% Created for Yuem Park at 2019-09-13 15:48:09 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Michalopoulos1995a,
+	Author = {Michalopoulos, P. and Aller, R. C.},
+	Date-Added = {2019-09-13 15:47:18 -0700},
+	Date-Modified = {2019-09-13 15:48:07 -0700},
+	Doi = {10.1126/science.270.5236.614},
+	Issn = {1095-9203},
+	Journal = {Science},
+	Month = {Oct},
+	Number = {5236},
+	Pages = {614-617},
+	Publisher = {American Association for the Advancement of Science (AAAS)},
+	Title = {Rapid Clay Mineral Formation in {A}mazon {D}elta Sediments: Reverse Weathering and Oceanic Elemental Cycles},
+	Url = {http://dx.doi.org/10.1126/science.270.5236.614},
+	Volume = {270},
+	Year = {1995},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1126/science.270.5236.614}}
 
 @article{Myrow2015a,
 	Author = {Myrow, Paul M. and Hughes, Nigel C. and Derry, Louis A. and Ryan McKenzie, N. and Jiang, Ganqing and Webb, A. Alexander G. and Banerjee, Dhiraj M. and Paulsen, Timothy S. and Singh, Birendra P.},
