Updates from Overleaf

--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -157,25 +157,17 @@ To estimate the decrease in steady-state \pCOtwo associated with the increase in
 
 The silicate weathering component of GEOCLIM calculates \COtwo consumption resulting from silicate weathering for each continental grid cell. In previous versions of the model, the silicate weathering rate was a function of temperature and runoff only, and assumed that the bedrock in all continental grid cells had identical chemical compositions \cite{Godderis2014a}. However, more recent versions of GEOCLIM implement regolith development and soil shielding into the silicate weathering component, which introduces an additional dependence on topographic slope (see SI). While this introduction of regolith development into GEOCLIM is an important piece of assessing the impact of tropical arc-continent collisions on \pCOtwo, the relatively high Ca+Mg concentration in arc rocks relative to other lithologies must also be considered. We therefore implement variable bedrock Ca+Mg concentration into the silicate weathering component of GEOCLIM. The spatial distribution of lithologies is sourced from the global lithologic map (GLiM) \cite{Hartmann2012a} and represented by 6 categories: metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment (see SI). Each continental grid cell is assigned one of these lithologic categories at a resolution of 0.1\degrees $\times$ 0.1\degrees. The Ca+Mg concentrations of felsic, intermediate, and mafic grid cells are assigned based on the mean of MgO and CaO data on rocks of each of these lithologic categories compiled from the EarthChem Portal (\url{www.earthchem.org/portal}). Given that GLiM does not distinguish ultramafic lithologies, such rocks are grouped with mafic rocks. As a result, the Ca+Mg concentration of the mafic category is likely an underestimate in regions of obducted ophiolites, such that the estimated effect of these regions on changing steady-state \pCOtwo is conservative. The weathering of carbonate does not contribute to long-term \COtwo consumption and therefore its Ca+Mg concentration is ignored in this analysis. The Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells are more difficult to define, since their chemical composition is strongly dependent on protolith composition and, in the case of siliciclastic sediment, the degree of previous chemical depletion. We therefore explore a range of feasible Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells during calibration of the silicate weathering component of GEOCLIM.
 
-The values of four parameters within the silicate weathering component of GEOCLIM
+The values of four parameters within the silicate weathering component of GEOCLIM \cite{Gabet2009a, West2012a} that modify the dependence of the silicate weathering rate on temperature, runoff, and particle age are poorly constrained (see SI). Rather than prescribing values for these parameters, we instead allow them and the Ca+Mg concentrations of metamorphic and siliciclastic sediment lithologies to vary within reasonable bounds, resulting in 78,000 unique combinations. For each of these combinations, we compute spatially-resolved long-term \COtwo consumption associated with Ca+Mg fluxes using present-day runoff, temperature, and slope. We sum computed \COtwo consumption over watersheds within a global compilation \cite{Gaillardet1999a, Moquet2018a}, then calculate the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of these watersheds. After eliminating all parameter combinations that result in low $r^{2}$, this approach leaves 3,339 parameter combinations that produce global and individual watershed \COtwo consumption fluxes that approximate those estimated in the literature for the present-day (see SI).
 
-Of the parameters used in the equations that govern the silicate weathering component of GEOCLIM, the values of four parameters within the chemical weathering parameterization \cite{West2012a} that modify the dependence of the silicate weathering rate on temperature, runoff, and particle age are poorly constrained (see SI). Rather than prescribing values for these parameters, we instead allow them and the Ca+Mg concentrations of metamorphic and siliciclastic sediment lithologies to vary within reasonable bounds, resulting in 78,000 unique combinations. For each of these combinations, we compute spatially-resolved long-term \COtwo consumption associated with Ca+Mg fluxes using present-day runoff, temperature, and slope. We sum computed \COtwo consumption over large-scale watersheds from a global compilation\cite{Gaillardet1999a} and watersheds of the Amazon Basin \cite{Moquet2018a}. We calculate the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of these basins, and eliminate all parameter combinations that result in low $r^{2}$. This approach leaves 3,339 parameter combinations that produce global and individual watershed \COtwo consumption fluxes that approximate those estimated in the literature for the present-day (see SI).
-
-Having calibrated the silicate weathering component of GEOCLIM, we use it to estimate the decrease in steady-state \pCOtwo associated with the emergence of I\&NG. For the climate model component of GEOCLIM, we use temperature and runoff at three \pCOtwo levels (286, 572, and 1144~ppm) from a subset of the GFDL CM2.0 experiments (\citealp{Delworth2006a, Delworth2006b}; see SI). The primary strength of using these experiments for this analysis is that all non-\COtwo forcings are held constant at values representative of pre-industrial conditions, allowing the effect of \pCOtwo to be isolated. For reconstructions of the paleoshoreline  We use terrestrial and marine sedimentary deposits to determine the position of paleoshorelines of I\&NG over the past 20~m.y. and include changes in areas of submerged continental shelves such as the Sunda Shelf that were previously exposed (Fig. \ref{fig:shoreline_growth}; see SI). In New Guinea, emergence in the Middle Miocene is associated with collision between the Melanesian Arc and Australia's distal margin \cite{vanUfford2005a, Cloos2005a, Baldwin2012a}, which drove exhumation of the 1440~km long Irian-Marum-April Ophiolite Belt. Exhumation of the New Guinea Central Range accelerated over the past 4~m.y. associated with slab-breakoff and buoyant uplift \cite{Cloos2005a} while in eastern New Guinea, progressive jamming of the north-dipping subduction zone also caused major uplift over this time interval \cite{vanUfford2005a}. Many of the islands of the Outer Banda Arc emerged after 5~Ma, associated with slab roll-back and collision with the Australian continental margin \cite{Harris2006a, Hall2013b}. These tectonic drivers lead to progressive emergence over the past 15~m.y. that accelerated following 5~Ma (Fig. \ref{fig:shoreline_growth}B). This trend mirrors broad cooling over the Neogene that resulted in the initiation of Northern Hemisphere ice sheets (Fig. \ref{fig:shoreline_growth}C).
+Having calibrated the silicate weathering component of GEOCLIM, we use it to estimate the decrease in steady-state \pCOtwo associated with the emergence of I\&NG. For the climate model component of GEOCLIM, we use temperature and runoff at three \pCOtwo levels (286, 572, and 1144~ppm) from a subset of the GFDL CM2.0 experiments \cite{Delworth2006a, Delworth2006b} (see SI). The primary strength of using these experiments for this analysis is that all non-\COtwo forcings are held constant at values representative of pre-industrial conditions, allowing the effect of \pCOtwo to be isolated. We use terrestrial and marine sedimentary deposits to determine the position of paleoshorelines of I\&NG over the past 20~m.y. and include changes in areas of submerged continental shelves such as the Sunda Shelf that were previously exposed (Fig. \ref{fig:shoreline_growth}; see SI). In New Guinea, emergence in the Middle Miocene is associated with collision between the Melanesian Arc and Australia's distal margin \cite{vanUfford2005a, Cloos2005a, Baldwin2012a}, which drove exhumation of the 1440~km long Irian-Marum-April Ophiolite Belt. Exhumation of the New Guinea Central Range accelerated over the past 4~m.y. associated with slab-breakoff and buoyant uplift \cite{Cloos2005a} while in eastern New Guinea, progressive jamming of the north-dipping subduction zone also caused major uplift over this time interval \cite{vanUfford2005a}. Many of the islands of the Outer Banda Arc emerged after 5~Ma, associated with slab roll-back and collision with the Australian continental margin \cite{Harris2006a, Hall2013b}. These tectonic drivers lead to progressive emergence over the past 15~m.y. that accelerated following 5~Ma (Fig. \ref{fig:shoreline_growth}B). This trend mirrors broad cooling over the Neogene that resulted in the initiation of Northern Hemisphere ice sheets (Fig. \ref{fig:shoreline_growth}C).
 
 To explore the sensitivity of global weatherability and climate state to the emergence of I\&NG, we test three scenarios using GEOCLIM (Fig. \ref{fig:scenario_pCO2}). The ``reduced I\&NG + Sunda Shelf'' scenario represents our best estimate of the subaerial extent of islands in the area at ca. 15~Ma. Given that the Sunda Shelf is presently submerged, across the shelf we distribute felsic and siliciclastic lithologies and assign shallow slope values in a manner that is consistent with existing observations (see SI). While we modify the land area, the position of the tectonic blocks remain fixed since we use a climate model forced with modern geography. While there has been motion of these tectonic blocks since 15~Ma, it has been minimal, and this fixed scenario is a good approximation of the paleogeography (see SI). The ``reduced I\&NG'' scenario is identical to the ``reduced I\&NG + Sunda Shelf'' scenario, but excludes the Sunda Shelf. The ``removed I\&NG'' scenario represents an end-member scenario, in which all islands associated with arc-continent collision in the area are removed.
 
-Using the 3,339 unique parameter combinations, the ``removed I\&NG'' scenario resulted in steady-state \pCOtwo's of 598--729~ppm (5--95 percentile values), the ``reduced I\&NG'' scenario resulted in 547--638~ppm \pCOtwo, and the ``reduced I\&NG + Sunda Shelf'' resulted in 533--611~ppm \pCOtwo (Fig. \ref{fig:scenario_pCO2}). These results suggest that without the Neogene increase in subaerially-exposed mountains associated with arc-continent collision, pre-industrial \pCOtwo would have been $\sim$533--611~ppm. These modeled \pCOtwo values resemble the higher end of proxy-based \pCOtwo estimates for the early Miocene \cite{Foster2017a}, indicating that the increase in subaerially-exposed land area and tectonic topography of I\&NG is sufficient to explain the long-term cooling of Earth's climate over the Neogene. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for Northern Hemisphere glaciation being significantly lower at $\sim$280~ppm \cite{DeConto2008a}. These modeled values are therefore consistent with Miocene ice sheets on Antarctica followed by Northern Hemisphere ice sheets as \pCOtwo subsequently decreased. 
+Using the 3,339 unique parameter combinations, the ``removed I\&NG'' scenario resulted in steady-state \pCOtwo's of 598--729~ppm (5--95 percentile values), the ``reduced I\&NG'' scenario resulted in 547--638~ppm \pCOtwo, and the ``reduced I\&NG + Sunda Shelf'' resulted in 533--611~ppm \pCOtwo (Fig. \ref{fig:scenario_pCO2}). These results suggest that without the Neogene increase in subaerially-exposed mountains associated with arc-continent collision, pre-industrial \pCOtwo would have been $\sim$533--611~ppm. These modeled \pCOtwo values resemble the higher end of proxy-based \pCOtwo estimates for the early Miocene \cite{Foster2017a}, indicating that the increase in subaerially-exposed land area and tectonic topography of I\&NG is sufficient to explain the long-term cooling of Earth's climate over the Neogene. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for Northern Hemisphere glaciation being significantly lower at $\sim$280~ppm \cite{DeConto2008a}. These modeled values are therefore consistent with Miocene ice sheets on Antarctica followed by Northern Hemisphere ice sheets as \pCOtwo subsequently decreased.
 
-Enhanced weatherability associated with the movement of the Deccan Traps into the tropical rain belt together with the low-latitude emplacement of the Ethiopian Traps is a distinct hypothesis to explain the draw-down of \COtwo leading into Oligocene glaciation of Antarctica \cite{Kent2008a, Kent2013a}. To explore the effect of the modern-day surface exposure of basaltic lavas on steady-state \pCOtwo, we test three additional scenarios using the lithologically-resolved implementation of GEOCLIM (Fig. \ref{fig:scenario_pCO2}). We replace the  volcanics associated with the respective igneous provinces with the Ca+Mg concentration of bulk continental crust in the model. The resulting  \pCOtwo is \textless500~ppm indicating that, while the presence mafic rocks in these igneous provinces modulates steady-state \pCOtwo, its contribution is less than that of the wetter and higher-relief I\&NG.
+Enhanced weatherability associated with the movement of the Deccan Traps into the tropical rain belt together with the low-latitude emplacement of the Ethiopian Traps is another hypothesis to explain the draw-down of \COtwo leading into Oligocene glaciation of Antarctica \cite{Kent2008a, Kent2013a}. To explore the effect of the modern-day surface exposure of basaltic lavas on steady-state \pCOtwo, we test three additional scenarios using the lithologically-resolved implementation of GEOCLIM (Fig. \ref{fig:scenario_pCO2}). We replace the volcanics associated with the respective igneous provinces with the Ca+Mg concentration of bulk continental crust in the model. The resulting \pCOtwo is \textless500~ppm indicating that, while the presence of mafic rocks in these igneous provinces modulates steady-state \pCOtwo, its contribution is less than that of the wetter and higher-relief I\&NG.
 
-Other hypotheses to explain ice sheet growth over the Neogene invoke changes in ocean/atmosphere circulation including: further climatic isolation of Antarctica due to strengthening of the circumpolar current \cite{Shevenell2004a}; increased atmospheric moisture in the Northern Hemisphere due to intensified thermohaline circulation following Panama Isthmus emergence  \cite{Haug1998a}; and cooling of North America resulting from a strengthened Walker Circulation associated with I\&NG emergence \cite{Molnar2015a}. Such changes in ocean/atmosphere circulation are likely to modulate \pCOtwo thresholds for glacial initiation and ice sheet growth \cite{DeConto2008a}. However, the prolonged timescale of the cooling trend since 14~Ma (Fig. \ref{fig:shoreline_growth}C) is most readily attributable to decreasing \pCOtwo associated with evolving geological sources and sinks of carbon, modulated by the silicate weathering feedback \cite{Walker1981a, Raymo1991a, Berner1997a, Kump1997a, Berner2001a}. Uplift in the Himalayas \cite{Raymo1988a} or a decrease in volcanic outgassing \cite{Berner1983a} have also been proposed as drivers for Neogene cooling, although recent analyses show Cenozoic sea floor spreading to be relative uniform \cite{Rowan2016a}. Proponents of the Himalayan hypothesis point toward rising marine \SrSr as being consistent with increasing weathering of the high \SrSr Himalayan lithologies \cite{Raymo1992a}. This rise in \SrSr since ca. 35~Ma is punctuated with a decrease in slope ca. 15~Ma that has been attributed to exhumation of relatively low \SrSr Lesser Himalaya lithologies \cite{Myrow2015a, Colleps2018a}, but could also be partially driven by the emergence of low \SrSr mafic lithologies in I\&NG. While paleogeographic changes elsewhere on Earth would have also modulated geological carbon sources and sinks, the onset of Northern hemisphere glaciation coincides with increased emergence in I\&NG following 5~Ma. Our coupled weathering-climate model indicates that \pCOtwo change associated with emergence of I\&NG is sufficient to explain climate change over the Neogene, suggesting that the global climate state is particularly sensitive to tropical paleogeography.
-
-%%% RELATIVELY COMPLETE TEXT ABOVE - BELOW ARE SNIPPETS THAT COULD BE INCORPORATED IN
-
-%After the MCO, a cooling trend began ca. 14~Ma that accelerated over the past 4~m.y. Many hypotheses have been proposed to explain this cooling trend including changes in ocean circulation and upwelling \cite{Shevenell2004a, Holbourn2015a}, perhaps associated with increased organic carbon burial \cite{Vincent1985a, Flower1993a} or the closure of the Central American Seaway \cite{Haug1998a}, an increase in the strength of the Walker Circulation \cite{Molnar2015a}, feedbacks with terrestrial vegetation \cite{Cerling1997a}(MAYBE ONE OF THE DINEZIO REFS), uplift in the Himalayas \cite{Raymo1988a}, or a decrease in volcanic outgassing \cite{Berner1983a}(ROWAN+ROWLEY). Although changes in circulation and vegetation may have contributed to changes in \pCOtwo on hundreds of thousands to million-year timescales, the global extent and multi-million year timescale suggests that the long-term cooling trend since 14~Ma is the product of changes in the geological sources and sinks of carbon, modulated by the silicate weathering feedback \cite{Walker1981a, Raymo1991a, Berner1997a, Kump1997a, Berner2001a}. Global spreading rates, ridge length, and paleogeography elsewhere on Earth undoubtedly changed through the Neogene contributing to changes in geological carbon sources and sinks, however, here we show that the global climate state is particularly sensitive to the tropical paleogeograpahy of I\&NG.
-
-%Based on paleogeographic reconstructions of arc-continent collisions through time, \cite{Macdonald2019a} proposed that arc-continent collisions in the tropics are responsible for increasing planetary weatherability, lowering \pCOtwo and causing the onset of glacial climate states. After the Miocene Climatic Optimum (MCO), a cooling trend began ca. 14~Ma associated with the growth of the Antarctic ice sheet, and accelerated over the past 4~m.y. culminating with the onset of northern hemisphere glaciation \cite{Shackleton1984a, Zachos2001a}. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for northern hemisphere glaciation being significantly lower at $\sim$280~ppm \cite{DeConto2008a}. The lower \pCOtwo threshold for northern hemisphere glaciation provides an explanation for southern hemisphere glaciation significantly preceding the development of ice sheets in both hemispheres. To evaluate the hypothesis that the increase of subaerially-exposed land area in I\&NG has played a significant role in lowering \pCOtwo and the development of northern hemisphere ice sheets, we use Neogene paleoshoreline reconstructions and couple a weathering model to climate model results to estimate the magnitude of changes in \pCOtwo that are coupled with changes in tropical paleogeography.
+Other hypotheses to explain ice sheet growth over the Neogene invoke changes in ocean/atmosphere circulation including: further climatic isolation of Antarctica due to strengthening of the circumpolar current \cite{Shevenell2004a}; increased atmospheric moisture in the Northern Hemisphere due to intensified thermohaline circulation following Panama Isthmus emergence \cite{Haug1998a}; and cooling of North America resulting from a strengthened Walker Circulation associated with I\&NG emergence \cite{Molnar2015a}. Such changes in ocean/atmosphere circulation are likely to modulate \pCOtwo thresholds for glacial initiation and ice sheet growth \cite{DeConto2008a}. However, the prolonged timescale of the cooling trend since 14~Ma (Fig. \ref{fig:shoreline_growth}C) is most readily attributable to decreasing \pCOtwo associated with evolving geological sources and sinks of carbon, modulated by the silicate weathering feedback \cite{Walker1981a, Raymo1991a, Berner1997a, Kump1997a, Berner2001a}. Uplift in the Himalayas \cite{Raymo1988a} or a decrease in volcanic outgassing \cite{Berner1983a} have also been proposed as drivers for Neogene cooling, although recent analyses show Cenozoic sea floor spreading to be relative uniform \cite{Rowan2016a}. Proponents of the Himalayan hypothesis point toward rising marine \SrSr as being consistent with increasing weathering of the high \SrSr Himalayan lithologies \cite{Raymo1992a}. This rise in \SrSr since ca. 35~Ma is punctuated with a decrease in slope ca. 15~Ma that has been attributed to exhumation of relatively low \SrSr Lesser Himalaya lithologies \cite{Myrow2015a, Colleps2018a}, but could also be partially driven by the emergence of low \SrSr mafic lithologies in I\&NG. While paleogeographic changes elsewhere on Earth would have also modulated geological carbon sources and sinks, the onset of Northern Hemisphere glaciation coincides with increased emergence in I\&NG following 5~Ma. Our coupled weathering-climate model indicates that \pCOtwo change associated with emergence of I\&NG is sufficient to explain climate change over the Neogene, suggesting that the global climate state is particularly sensitive to tropical paleogeography.
 
 %%TC:ignore
 \section*{ACKNOWLEDGEMENTS \label{sec:ACKNOWLEDGEMENTS}}
